# EoBE

./: CMakeLists.txt  README.md
SavedGenomes/: CompetentAirhead.genome  EarlyCo-exist_1.genome  EarlyCo-exist_2.genome  EarlyCo-exist_3.genome  EarlyCo-exist_4.genome  Herder.genome  PelletClusterAvoider.genome  Pouncer.genome  SpikedSweeper3.genome  SwayingStick.genome
Utility/: Algorithm.h  CMakeLists.txt  CircularBuffer.h  NeuralNetwork.cpp  NeuralNetwork.h  QuadTree.cpp  QuadTree.h  Random.h  RollingStatistics.h  Shape.h  Transform.h  WindowedRollingStatistics.cpp  WindowedRollingStatistics.h
src/: CMakeLists.txt  ControlScheme.cpp  ControlScheme.h  ControlSchemePanAndZoom.cpp  ControlSchemePanAndZoom.h  ControlSchemePickAndMoveEntity.cpp  ControlSchemePickAndMoveEntity.h  ControlSchemePickAndMoveSpawner.cpp  ControlSchemePickAndMoveSpawner.h  DrawSettings.h  Egg.cpp  Egg.h  Entity.cpp  Entity.h  EntityContainerInterface.h  EntityPropertyTableModel.cpp  EntityPropertyTableModel.h  EntitySvgManager.cpp  EntitySvgManager.h  FeedDispenser.cpp  FeedDispenser.h  FoodPellet.cpp  FoodPellet.h  Icons.qrc  InspectorPanel.cpp  InspectorPanel.h  InspectorPanel.ui  LineGraph.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeatChunk.cpp  MeatChunk.h  NeuralNetworkInspector.cpp  NeuralNetworkInspector.h  PropertyTableModel.cpp  PropertyTableModel.h  QuadTree.cpp  QuadTree.h  ScatterGraph.cpp  (+15 more)
src/Effectors/: Effector.cpp  Effector.h  EffectorSpike.h  (+9 more)
test/: CMakeLists.txt  TestCircularBuffer.cpp  TestQuadTree.cpp  TestRollingStatistics.cpp  TestWindowedFrequencyStatistics.cpp
(+54 files in other folders)
